--- a/Assignment1.html
+++ b/Assignment1.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<style>
+     h1,h2,h3{
+        color: pink;
+        background-color: black;
+       color: aliceblue;
+        text-align: center;
+    }
+    
+</style>
+<body style="background-image: url('Canara.jpg') ; background-size: 2200px 1220px; background-repeat: no-repeat; background-position: center;">
     <article>
         <section>
             <details>
@@ -63,7 +72,26 @@
 <img width="560" height="315"src="https://imgs.search.brave.com/Jht3_9hdiHzjFKezTk8FNJ1TvGw_etYC7pw7zN2qTC8/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly93d3cu/dzNzY2hvb2xzLmNv/bS9ob3d0by9pbWdf/Zm9yZXN0LmpwZw"/>
 <iframe src="https://www.wikipedia.org/"width="560" height="315"> 
 </iframe>
-<iframe width="560" height="315"  src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"></iframe>
+
+<h1>Abhishek Mankude</h1>
+<p class="address">Mangaluru</p>
+<p id="no">8310669294</p>
+
+<h2>Rajajinagar</h2>
+<h3>Bhashyam circle</h3>
+<article>
+    <h1>
+      <center><u>Assignment 1</u></center>
+    </h1>
+    <h2 id="12">Artificial Intelligence</h2>
+    AI is a fascinating field that involves the development of computer
+    systems that can perform tasks that typically require human intelligence,
+    such as learning, problem-solving, and decision-making. Some examples of
+    AI include virtual assistants like Siri and Alexa, self-driving cars, and
+    image recognition software. There are also various types of AI, including
+    narrow or weak AI, which is designed to perform a specific task, and
+    general or strong AI, which aims to replicate human intelligence.
+  </article>
 
 </body>
 </html>
